<resources>
    <string name="app_name">Буфет</string>
    <string name="sp_name">Settings</string>
    <string name="splash_subtitle">Удобно и быстро</string>
    <!-- menu titles -->
    <string name="menu_restaurants">Заведения</string>
    <string name="menu_favorites">Избранное</string>
    <string name="menu_order">Заказ</string>
    <string name="menu_profile">Профиль</string>
    <!-- /menu titles -->

    <!-- descriptions and labels-->
    <string name="logo_bufet">logo</string>
    <string name="splash_item">splashItem</string>
    <string name="navigation_splash">navigationSplash</string>
    <string name="navigation_restaurants">navigationRestaurants</string>
    <string name="navigation_favorites">navigationFavorites</string>
    <string name="navigation_order">navigationOrder</string>
    <string name="navigation_profile">navigationProfile</string>
    <string name="navigation_food_menu">navigationFoodMenu</string>
    <string name="navigation_restaurant">navigationRestaurant</string>
    <string name="navigation_reserve">navigationReserveTable</string>
    <string name="navigation_reserved_table">navigationReservedTable</string>
    <string name="table_image">tableImage</string>
    <string name="item_table_btn_text_order">Выбрать</string>
    <string name="item_gallery">itemGallery</string>
    <string name="tabs_gallery">tabsGallery</string>
    <string name="food_image">foodImage</string>
    <string name="back_button">backButton</string>
    <string name="favorite_button">favoriteButton</string>
    <string name="restaurant_item">restaurant_item</string>
    <string name="dialog_select_time_reserve_table">timeTableReserve</string>
    <string name="dialog_payment_reserve_table">PaymentReserveTable</string>
    <string name="dialog_payment_reserve_table_verification">PaymentReserveTableVerification</string>
    <string name="payment_types">paymentTypes</string>
    <string name="reserved_table_qr">reservedTableQrCode</string>
    <!-- /descriptions -->

    <!-- main display -->
    <string name="main_display_title">Удобно и быстро\nв любом ресторане</string>
    <string name="main_display_search_text">Поиск</string>
    <string name="main_display_cancel_search_button">Отмена</string>
    <string name="main_display_not_found_title">Заведение не найдено</string>
    <string name="main_display_not_found_text">Попробуйте поискать заведение с другим названием</string>
    <string-array name="main_display_title_tabs">
        <item>Все</item>
        <item>таверна</item>
        <item>мультиконцептуальное кафе</item>
        <item>ресторанчик на углях</item>
        <item>ресторан</item>
        <item>ресторан-путешествие</item>
        <item>бар</item>
        <item>ресторан кавказской кухни</item>
        <item>кафе</item>
    </string-array>
    <!-- /main display -->

    <!-- restaurant display -->
    <string name="table_select">Выберите стол</string>
    <string name="guest_counter_text">Кол-во мест: </string>
    <string name="table_available">Сейчас свободен</string>
    <string name="table_unavailable">Сейчас занят</string>
    <string name="menu_button_text">Посмотреть меню</string>
    <!-- /restaurant display -->

    <!-- reserve display -->
    <string name="reserve_title">Детали бронирования</string>
    <string name="reserve_breakfast">Завтрак</string>
    <string name="reserve_lunch">Обед</string>
    <string name="reserve_dinner">Ужин</string>
    <string name="reserve_today">Сегодняшняя\nдата</string>
    <string name="reserve_selected_day">Выбрано\nвами</string>
    <string name="reserved_breakfast">Завтрак\nзабронирован</string>
    <string name="reserved_lunch">Обед\nзабронирован</string>
    <string name="reserved_dinner">Ужин\nзабронирован</string>
    <string name="reserve_table_button">Оплатить бронь (450 ₽)</string>
    <string name="reserve_time_title">Доступное время</string>
    <string name="reserve_accept_time">Ок</string>
    <string name="reserve_cancel_time">Отменить</string>
    <string name="reserve_time_warning">Необходимо выбрать дату и время</string>
    <!-- /reserve display -->

    <!-- food list fragment -->
    <string name="food_list_not_found_food_text">Попробуйте поискать с другим названием</string>
    <string name="food_list_not_found_food_title">Ничего не найдено</string>
    <!-- /food list fragment -->

    <!-- errors -->
    <string name="connection_error">Отсутствует интернет-соединение. Проверьте подключение</string>
    <string name="item_available">Сейчас свободен</string>
    <string name="item_unavailable">Сейчас занят</string>
    <string name="table_today_unavailable">К сожалению, стол забронирован на весь день</string>
    <!-- /errors -->

    <!-- default values -->
    <string name="default_value">0</string>
    <string name="rub_value">₽</string>
    <string name="restaurant_not_open">Закрыто</string>

    <!-- calendar month array and week names data -->
    <string name="material_calendar_monday">Пн</string>
    <string name="material_calendar_tuesday">Вт</string>
    <string name="material_calendar_wednesday">Ср</string>
    <string name="material_calendar_thursday">Чт</string>
    <string name="material_calendar_friday">Пт</string>
    <string name="material_calendar_saturday">Сб</string>
    <string name="material_calendar_sunday">Вс</string>
    <array name="material_calendar_months_array">
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </array>
    <!-- /calendar month array and week names data -->

    <!-- food item -->
    <string name="food_counter_plus">+</string>
    <string name="food_counter_default_value">1</string>
    <string name="food_counter_minus">-</string>
    <!-- /food item -->

    <!-- food card -->
    <string name="food_card_order_button">Заказать за 350 руб.</string>
    <string name="food_card_description_btn">Описание</string>
    <string name="food_card_components_btn">Состав</string>
    <string name="food_card_feedback_btn">Отзывы</string>
    <!-- /food card -->

    <!-- payment table reserve -->
    <string name="dialog_payment_table_title">Оплата бронирования</string>
    <string name="dialog_payment_table_card_number">Номер карты:</string>
    <string name="dialog_payment_table_expiration_date">Срок действия:</string>
    <string name="dialog_payment_table_expiration_date_placeholder">ММ/ГГ</string>
    <string name="dialog_payment_table_cv_code">CV-код:</string>
    <string name="dialog_payment_table_save_card">Запомнить карту</string>
    <string name="dialog_payment_table_policy_text">Нажимая кнопку \"Оплатить\" вы соглашаетесь с </string>
    <string name="dialog_payment_table_policy">условиями оферты</string>
    <string name="dialog_payment_table_button_ok">Оплатить</string>
    <string name="dialog_payment_table_button_cancel">Отменить</string>
    <string name="dialog_payment_table_verification_code">Код подтверждения платежа:</string>
    <!-- /payment table reserve -->

    <!-- table reserved -->
    <string name="fragment_table_reserved_title">Оплата прошла успешно</string>
    <string name="fragment_table_reserved_table_has_been_reserved_text">Стол забронирован.\nПредъявите QR код официанту по факту посещения заведения.</string>
    <string name="fragment_table_reserved_go_to_food_list_button">Перейти к выбору блюд</string>
    <string name="fragment_table_reserved_go_to_cabinet_button">Перейти в кабинет</string>
    <!-- /table reserved -->
</resources>