<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loading"
    app:startDestination="@+id/navigation_restaurants">

    <fragment
        android:id="@+id/navigation_restaurants"
        android:name="ru.gb.bufet.view.RestaurantsFragment"
        android:label="@string/navigation_restaurants"
        tools:layout="@layout/fragment_restaurants" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="ru.gb.bufet.view.FavoritesFragment"
        android:label="@string/navigation_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="ru.gb.bufet.view.ProfileFragment"
        android:label="@string/navigation_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_restaurant"
        android:name="ru.gb.bufet.view.RestaurantFragment"
        android:label="@string/navigation_profile"
        tools:layout="@layout/fragment_restaurant" />

    <fragment
        android:id="@+id/navigation_food_menu"
        android:name="ru.gb.bufet.view.MenuFragment"
        android:label="@string/navigation_food_menu"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/navigation_reserve"
        android:name="ru.gb.bufet.view.ReserveFragment"
        android:label="@string/navigation_reserve"
        tools:layout="@layout/fragment_reserve" />

    <!-- на мой взгляд тумач, я бы предложил реализовать более гибко, по аналогии с тем, что выше каждый фрагмент можем использовать т.к. нам нужно в соответствующих методах MainActivity, пометил комментом navigation methods-->

<!--    <fragment-->
<!--        android:id="@+id/navigation_restaurants"-->
<!--        android:name="ru.gb.bufet.view.RestaurantsFragment"-->
<!--        android:label="@string/navigation_restaurants"-->
<!--        tools:layout="@layout/fragment_restaurants" >-->
<!--        <action-->
<!--            android:id="@+id/action_navigation_restaurants_to_navigation_restaurant"-->
<!--            app:destination="@id/navigation_restaurant" />-->
<!--    </fragment>-->

<!--    <fragment-->
<!--        android:id="@+id/navigation_order"-->
<!--        android:name="ru.gb.bufet.view.OrderFragment"-->
<!--        android:label="@string/navigation_order"-->
<!--        tools:layout="@layout/fragment_order" >-->
<!--        <action-->
<!--            android:id="@+id/action_navigation_order_to_navigation_reserve"-->
<!--            app:destination="@id/navigation_reserve" />-->
<!--    </fragment>-->

<!--    <fragment-->
<!--        android:id="@+id/navigation_restaurant"-->
<!--        android:name="ru.gb.bufet.view.RestaurantFragment"-->
<!--        android:label="@string/navigation_restaurant"-->
<!--        tools:layout="@layout/fragment_restaurant" >-->
<!--        <action-->
<!--            android:id="@+id/action_navigation_restaurant_to_navigation_order"-->
<!--            app:destination="@id/navigation_order" />-->
<!--        <action-->
<!--            android:id="@+id/action_navigation_restaurant_to_navigation_menu"-->
<!--            app:destination="@id/navigation_menu" />-->
<!--    </fragment>-->


<!--    <fragment-->
<!--        android:id="@+id/navigation_menu"-->
<!--        android:name="ru.gb.bufet.view.MenuFragment"-->
<!--        android:label="@string/navigation_menu" >-->
<!--        <argument-->
<!--            android:name="restId"-->
<!--            app:argType="integer" />-->
<!--    </fragment>-->

</navigation>