<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/main_display_main_container"
    tools:context=".MainActivity">

    <include
        android:id="@+id/header"
        layout="@layout/item_header" />

    <!--todo сделать в стиле приложения!!! -->
    <androidx.appcompat.widget.SearchView
        android:id="@+id/fragmentMenuSearchView"
        style="@style/search_layout_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:iconifiedByDefault="false"
        app:queryHint="Search food..." />
    <!--/todo сделать в стиле приложения!!! -->

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/fragmentMenuFilterFood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/item_table_btn_text_order"
        app:tabGravity="center"
        app:tabIndicatorColor="@color/general_color"
        app:tabMode="scrollable" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragmentMenuMenuRecycler"
        style="@style/match_match_container" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/fragmentMenuNotFoundBlock"
        style="@style/base_constraint"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/fragmentMenuNotFoundIcon"
            style="@style/search_not_found_icon"
            android:contentDescription="@string/food_list_not_found_food_title"
            app:srcCompat="@drawable/icon_search_big" />

        <TextView
            android:id="@+id/fragmentMenuNotFoundTitle"
            style="@style/not_found_title"
            android:text="@string/food_list_not_found_food_title" />

        <TextView
            android:id="@+id/fragmentMenuNotFoundText"
            style="@style/not_found_text"
            android:text="@string/food_list_not_found_food_text" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</LinearLayout>